--- a/2h/src/main/resources/application.yaml
+++ b/2h/src/main/resources/application.yaml
@@ -1,12 +1,6 @@
 server:
   port: 9000
 spring:
-  jpa:
-    show-sql: true
-    generate-ddl: true
-    hibernate:
-      ddl-auto: create
-  datasource:
-    url: "jdbc:postgresql://localhost:5432/client_bank"
-    username: "postgres"
-    password: "82161487"
+  profiles:
+    active: "prod"
+
