--- a/2h/pom.xml
+++ b/2h/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.18</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+
     </dependencies>
 
     <build>
