--added profs and connected to H2 and local DB

--- a/2h/src/main/resources/application-prod.yaml
+++ b/2h/src/main/resources/application-prod.yaml
@@ -5,6 +5,6 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    url: "jdbc:postgresql://localhost:5432/client_bank"
-    username: "postgres"
-    password: "82161487"
+    url: "jdbc:postgresql://dumbo.db.elephantsql.com/"
+    username: "tavvnzuz"
+    password: "mP8sXksLyc5GB3LEGRBwoDcvEW4RBH4-"
