--- a/3/pom.xml
+++ b/3/pom.xml
@@ -50,7 +50,11 @@
             <version>1.4.200</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
